@@ -1,0 +1,9 @@
+Title: stale services view: excluded services in downtime per default
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.2.8p11
+Date: 1473421765
+Class: fix
+
+
