@@ -1612,8 +1612,9 @@ multisite_builtin_views.update({
                   'datasource': 'services',
                   'description': _('Services that have not been checked for too long according to their configured check intervals.'),
                   'group_painters': [('host', 'host', '')],
-                  'hard_filters': ['service_staleness'],
-                  'hard_filtervars': [('is_service_staleness', '1')],
+                  'hard_filters': [ 'service_staleness', 'service_scheduled_downtime_depth' ],
+                  'hard_filtervars': [('is_service_staleness', '1'),
+                                      ('is_service_scheduled_downtime_depth', '0')],
                   'hidden': False,
                   'hide_filters': [],
                   'hidebutton': False,
